--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -15,11 +15,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #0a0b1a;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #515a04;
 }
 
 /* body {
