--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -15,11 +15,13 @@
 
 a {
   font-weight: 500;
-  color: #0a0b1a;
-  text-decoration: inherit;
+  color: inherit;
+  text-decoration: none;
 }
+
 a:hover {
   color: #515a04;
+  text-decoration: none;
 }
 
 /* body {
@@ -77,4 +79,3 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
-
