--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #b93636;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -23,14 +23,6 @@ a:hover {
   color: #515a04;
   text-decoration: none;
 }
-
-/* body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-} */
 
 h1 {
   font-size: 3.2em;
